--- a/css/main.css
+++ b/css/main.css
@@ -59,17 +59,18 @@ input[type="text"]:focus {
 .appl-main {
   max-width: 540px;
   width: 80%;
+  box-shadow: 0 0.5em 1em -0.125em rgba(10,10,10,.1), 0 0 0 1px rgba(10,10,10,.02);  
 }
 
 
 .appl-main__header {
+  align-items: center;
   background-color: #4a4a4a;
   border-radius: 4px 4px 0 0;
   color: #fff;
-  padding: .75rem 1rem;
-  justify-content: space-between;
-  align-items: center;
   display: flex;
+  justify-content: space-between;
+  padding: .75rem 1rem;
 }
 
 .appl-button--close {
