--- a/css/main.css
+++ b/css/main.css
@@ -1,29 +1,28 @@
+/* ==========================================================================
+   Base styles: opinionated defaults
+   ========================================================================== */
+
 html, body {
   height: 100%;
 }
 
 html {
-  /* background-image: radial-gradient(var(--checker-color) .5px, transparent .5px);
-  background-size: calc(10 * .5px) calc(10 * .5px); */
-
-  /* --checker-color: #dfdfdf; */
   --checker-color: #f0f0f0;
-
+  background-color: white;
   background-image: repeating-linear-gradient(45deg, var(--checker-color) 25%, transparent 25%, transparent 75%, var(--checker-color) 75%, var(--checker-color)),repeating-linear-gradient(45deg, var(--checker-color) 25%, transparent 25%, transparent 75%, var(--checker-color) 75%, var(--checker-color));
   background-position: 0 0,10px 10px;
   background-size: calc(2 * 10px) calc(2 * 10px);
-
-  background-color: white;
-  color: black;
-  /* color: #dfdfdf; */
 }
 
 body {
-  display: flex;
   align-items: center;
+  color: #363636;
+  display: flex;
   justify-content: center;
+  line-height: 1.5;
+  min-height: 200px;
+  min-width: 320px;
 }
-
 
 a {
   color: inherit;
@@ -50,18 +49,23 @@ input[type="text"]:focus {
   padding: calc(.5rem - 0.5px) .75rem;
 }
 
-
 .appl-color-input {
   width: 100%;
 }
 
+/* ==========================================================================
+   Main UI
+   ========================================================================== */
 
 .appl-main {
+  box-shadow: 0 0.5rem 1rem -0.125rem rgba(10, 10, 10, .1), 0 0 0 1px rgba(10, 10, 10, .02);
   max-width: 540px;
   width: 80%;
-  box-shadow: 0 0.5em 1em -0.125em rgba(10,10,10,.1), 0 0 0 1px rgba(10,10,10,.02);  
 }
 
+/*
+ * "Dialog" caption
+ */
 
 .appl-main__header {
   align-items: center;
@@ -73,16 +77,29 @@ input[type="text"]:focus {
   padding: .75rem 1rem;
 }
 
+.appl-main__title {
+  font-size: 1rem;
+  margin: 0;
+}
+
+/*
+ * Close button
+ */
+
 .appl-button--close {
   background-color: rgba(10, 10, 10, .2);
   border-radius: 50%;
   border: none;
   color: white;
   cursor: pointer;
+  display: inline-flex;
   font-weight: bold;
+  height: 1.25rem;
+  justify-content: center;
+  line-height: 0.85;
   outline: 0;
-  padding: 0 0.275rem 0.15rem 0.275rem;
   user-select: none;
+  width: 1.25rem;
 }
 
 .appl-button--close:focus, .appl-button--close:hover {
@@ -93,24 +110,26 @@ input[type="text"]:focus {
   background-color: rgba(10, 10, 10, .4);
 }
 
+/*
+ * "Dialog" body
+ */
+
 .appl-main__body {
   background-color: #f5f5f5;
-  /* padding: 1.25rem 1.5rem; */
-  padding: 2rem 1.5rem;
   border-radius: 0 0 4px 4px;
+  padding: 2rem 1.5rem;
 }
 
-.appl-main__title {
-  font-size: 1rem;
-  margin: 0;
-}
-
+/*
+ * Tip (with contrasting text against background)
+ */
 
 .appl-tip {
-  /* background-color: rgba(255, 255, 255, 0.5); */
-  color: #fff;
-  border-radius: 4px;
-  padding: .5rem .75rem;
-  text-shadow: 1px 1px transparent, -1px -1px black;
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-color: inherit;
+  color: transparent;
+  filter: invert(1) grayscale(1) contrast(2);
+  font-weight: 500;
+  letter-spacing: 1px;
 }
-
