--- a/src/css/main.css
+++ b/src/css/main.css
@@ -87,7 +87,7 @@ input[type="text"]:focus {
  */
 
 .appl-button--close {
-  background-color: rgba(10, 10, 10, .2);
+  /* background-color: rgba(10, 10, 10, .2);
   border-radius: 50%;
   border: none;
   color: white;
@@ -99,15 +99,26 @@ input[type="text"]:focus {
   line-height: 0.85;
   outline: 0;
   user-select: none;
-  width: 1.25rem;
+  width: 1.25rem; */
+
+  background-color: #3d3d3d;
+  background-image: linear-gradient(-45deg, transparent 0%, transparent 46%, white 46%,  white 56%,transparent 56%, transparent 100%), linear-gradient(45deg, transparent 0%, transparent 46%, white 46%,  white 56%,transparent 56%, transparent 100%);
+  border-radius: 100%;
+  border: 4px solid #3d3d3d;
+  height: 20px;
+  outline: 0;
+  transition: all 0.3s ease;  
+  width: 20px;
 }
 
 .appl-button--close:focus, .appl-button--close:hover {
-  background-color: rgba(10, 10, 10, .3);
+  border-color: #303030;
+  background-color: #303030;
 }
 
 .appl-button--close:active {
-  background-color: rgba(10, 10, 10, .4);
+  border-color: #202020;
+  background-color: #202020;
 }
 
 /*
@@ -129,7 +140,10 @@ input[type="text"]:focus {
   background-clip: text;
   background-color: inherit;
   color: transparent;
+  cursor: default;
   filter: invert(1) grayscale(1) contrast(2);
   font-weight: 500;
   letter-spacing: 1px;
+  text-align: center;
+  user-select: none;
 }
