--- a/src/css/main.css
+++ b/src/css/main.css
@@ -101,14 +101,29 @@ input[type="text"]:focus {
   user-select: none;
   width: 1.25rem; */
 
-  background-color: #3d3d3d;
+  /* background-color: #3d3d3d;
   background-image: linear-gradient(-45deg, transparent 0%, transparent 46%, white 46%,  white 56%,transparent 56%, transparent 100%), linear-gradient(45deg, transparent 0%, transparent 46%, white 46%,  white 56%,transparent 56%, transparent 100%);
   border-radius: 100%;
   border: 4px solid #3d3d3d;
   height: 20px;
   outline: 0;
   transition: all 0.3s ease;  
+  width: 20px; */
+
+  background-color: rgba(10, 10, 10, .2);
+  border: none;
   width: 20px;
+  border-radius: 100%;
+  height: 20px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.appl-button__icon--close {
+  fill: #fff;
+  width: 8px;
+  height: 8px;
 }
 
 .appl-button--close:focus, .appl-button--close:hover {
